[package]
name = "reddit-linker-rs"
version = "0.1.0"
authors = ["Scott Callaway <github@scottcallaway.co.uk>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1"
tokio = { version = "0.2", features = ["macros"] }

[dependencies.serenity]
default-features = false
features = ["builder", "client", "rustls_backend", "gateway", "http", "model", "utils", "cache"]
version = "0.9.0"
