[package]
name = "reddit-linker-rs"
version = "0.1.0"
authors = ["Scott Callaway <github@scottcallaway.co.uk>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
regex = "1"
tokio = { version = "0.2", features = ["macros"] }
once_cell = "1.5.2"

[dependencies.serenity]
default-features = false
features = ["builder", "client", "rustls_backend", "gateway", "http", "model", "utils", "cache"]
version = "0.9.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
